--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,14 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^10.1.5",
         "laravel/sanctum": "^3.2.1",
@@ -45,6 +49,15 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "ide-helper": [
+            "@php artisan optimize:clear",
+            "@composer dump-autoload",
+            "@php artisan ide-helper:eloquent",
+            "@php artisan ide-helper:eloquent",
+            "@php artisan ide-helper:generate -M -H",
+            "@php artisan ide-helper:models -N -r -p -M",
+            "@php artisan ide-helper:meta"
         ]
     },
     "extra": {
