--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "barryvdh/laravel-ide-helper": "^2.13",
         "guzzlehttp/guzzle": "^7.5",
+        "laravel/breeze": "^1.19",
         "laravel/framework": "^10.1.5",
         "laravel/sanctum": "^3.2.1",
         "laravel/tinker": "^2.8.1"
@@ -20,8 +21,9 @@
         "laravel/pint": "^1.6",
         "laravel/sail": "^1.21",
         "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^7.0.5",
-        "phpunit/phpunit": "^10.0.13",
+        "nunomaduro/collision": "^6.4",
+        "pestphp/pest": "^1.22",
+        "pestphp/pest-plugin-laravel": "^1.2",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
