--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "laravel-vue-pagination": "^4.0.0",
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1"
     }
