E12 - Routing: Navigation Links and Posts Create

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "laravel-vue-pagination": "^4.0.0",
         "vue": "^3.2.47",
-        "vue-loader": "^17.0.1"
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.1.6"
     }
 }
