--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@casl/ability": "^6.3.3",
+        "@casl/vue": "^2.2.1",
         "@vitejs/plugin-vue": "^4.0.0",
         "laravel-vue-pagination": "^4.0.0",
         "vue": "^3.2.47",
